invalid_sym_arg_keywords_test/invalid_sym_arg_keywords_test_3.src
.IPPcode24
PUSHS GF@a int@5